--- a/1.0.3_0 (M3) [Edge]/manifest.json
+++ b/1.0.3_0 (M3) [Edge]/manifest.json
@@ -43,9 +43,5 @@
    },
    "permissions": [ "declarativeNetRequest", "declarativeNetRequestFeedback", "storage", "scripting", "webNavigation", "tabs" ],
    "short_name": "skip",
-   "version": "1.0.2",
-   "web_accessible_resources": [ {
-      "matches": [ "*://*.youtube.com/*" ],
-      "resources": [ "lib/scriptlets.js" ]
-   } ]
+   "version": "1.0.3"
 }
