--- a/1.0.5_0 (M3) [Chrome]/manifest.json
+++ b/1.0.5_0 (M3) [Chrome]/manifest.json
@@ -14,7 +14,7 @@
    },
    "content_scripts": [ {
       "all_frames": true,
-      "js": ["bundled-content-script.js" ],
+      "js": ["codehemu-content-script.js" ],
       "matches": [ "*://*.youtube.com/*" ],
       "run_at": "document_start"
    } ],
@@ -27,7 +27,7 @@
    },
    "default_locale": "en",
    "description": "__MSG_extensionDescription__",
-   "host_permissions": [ "\u003Call_urls>" ],
+   "host_permissions": ["*://*.youtube.com/*"],
    "homepage_url": "https://www.downloadhub.cloud/2022/09/skip-video-ads-youtube.html",
    "icons": {
       "128": "data/icons/icon-128.png",
@@ -41,7 +41,7 @@
       "open_in_tab": false,
       "page": "data/options/options.html"
    },
-   "permissions": [ "declarativeNetRequest", "declarativeNetRequestFeedback", "storage", "scripting", "webNavigation", "tabs" ],
+   "permissions": [ "declarativeNetRequest", "storage", "webNavigation", "tabs" ],
    "short_name": "skip",
    "version": "1.0.5"
 }
